Tested on redis server running on local

--- a/test.ipynb
+++ b/test.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "True"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,22 +292,22 @@
     "    embeddings,\n",
     "    metadatas=metadata, \n",
     "    redis_url = url,\n",
-    "    index_name=\"users\"\n",
+    "    index_name=\"users123\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'users'"
+       "'users123'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,19 +325,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(metadata={'id': 'doc:users:463c5dfa4e6a402c951425bf17acace1', 'user': 'john', 'job': 'engineer', 'credit_score': 'high', 'age': '18'}, page_content='foo'),\n",
-       " Document(metadata={'id': 'doc:users:fdcc4a442d42418f934394bcba9f92e6', 'user': 'derrick', 'job': 'doctor', 'credit_score': 'low', 'age': '45'}, page_content='foo'),\n",
-       " Document(metadata={'id': 'doc:users:b98f946557d74646b7a1846d1af207c9', 'user': 'nancy', 'job': 'doctor', 'credit_score': 'high', 'age': '94'}, page_content='foo'),\n",
-       " Document(metadata={'id': 'doc:users:12ee6eee97014d64adac451ccf90d87f', 'user': 'joe', 'job': 'dentist', 'credit_score': 'medium', 'age': '35'}, page_content='bar')]"
+       "[Document(metadata={'id': 'doc:users123:2afed82b083f439d85506fc56ffc3d4d', 'user': 'john', 'job': 'engineer', 'credit_score': 'high', 'age': '18'}, page_content='foo'),\n",
+       " Document(metadata={'id': 'doc:users123:dc411819b3324844aa55eb28001ec1ca', 'user': 'derrick', 'job': 'doctor', 'credit_score': 'low', 'age': '45'}, page_content='foo'),\n",
+       " Document(metadata={'id': 'doc:users123:c91ea6b84d084555a24b315f8a1a057d', 'user': 'nancy', 'job': 'doctor', 'credit_score': 'high', 'age': '94'}, page_content='foo'),\n",
+       " Document(metadata={'id': 'doc:users123:d4efc7a4b1be42698dbcf291f58aa7fc', 'user': 'joe', 'job': 'dentist', 'credit_score': 'medium', 'age': '35'}, page_content='bar')]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,6 +346,13 @@
     "results = rds.similarity_search(\"bafo\")\n",
     "results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
