Checking the presence and fetching an index

--- a/test.ipynb
+++ b/test.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,9 @@
     "    metadatas=metadata, \n",
     "    redis_url = url,\n",
     "    index_name=\"users123\"\n",
-    ")"
+    ")\n",
+    "\n",
+    "rds.write_schema(\"redis_schema.yaml\")"
    ]
   },
   {
@@ -348,11 +350,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# connect to an existing index"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#fetch existing index\n",
+    "\n",
+    "new_rds = Redis.from_existing_index(\n",
+    "    embeddings,\n",
+    "    index_name=\"users123\",\n",
+    "    redis_url = os.getenv(\"REDIS_DB_URL\"),\n",
+    "    schema=\"redis_schema.yaml\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Document(metadata={'id': 'doc:users123:2afed82b083f439d85506fc56ffc3d4d', 'user': 'john', 'job': 'engineer', 'credit_score': 'high', 'age': '18'}, page_content='foo'),\n",
+       " Document(metadata={'id': 'doc:users123:dc411819b3324844aa55eb28001ec1ca', 'user': 'derrick', 'job': 'doctor', 'credit_score': 'low', 'age': '45'}, page_content='foo'),\n",
+       " Document(metadata={'id': 'doc:users123:c91ea6b84d084555a24b315f8a1a057d', 'user': 'nancy', 'job': 'doctor', 'credit_score': 'high', 'age': '94'}, page_content='foo'),\n",
+       " Document(metadata={'id': 'doc:users123:fdfe91bbdd874e07adfdc1891b50c62b', 'user': 'john', 'job': 'engineer', 'credit_score': 'high', 'age': '18'}, page_content='foo')]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = new_rds.similarity_search(\"chipi\")\n",
+    "results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# checking the existence of an index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The key 'user1111' does not exist.\n"
+     ]
+    }
+   ],
+   "source": [
+    "client = redis.Redis(host='localhost', port=6379, db=0)\n",
+    "key = 'user1111'\n",
+    "if client.exists(key):\n",
+    "    print(f\"The key '{key}' exists.\")\n",
+    "else:\n",
+    "    print(f\"The key '{key}' does not exist.\")"
+   ]
   }
  ],
  "metadata": {
